<resources>
    <string name="app_name">FlightPlanner</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="err_msg_password">Please fill the password field!</string>
    <string name="err_msg_email">Fill the email field</string>
    <string name="msg_error_login_access">Wrong email or password.</string>
    <string name="message_type">Message Type</string>
    <string name="flight_number">Flight Number</string>
    <string name="origin_airport_code">Origin Airport Code</string>
    <string name="destination_airport_code">Destination Airport Code</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="send_email">Send Email</string>
    <string name="send_email_chooser">Send Email</string>
    <string name="email_template" formatted="false">(%s-%s-%s-%s/%s)</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="settings">Connect</string>
    <string name="exit">Cancel</string>
    <string name="message_delay">Delay Message</string>
    <string name="message_change">Change Message</string>
    <string name="message_request">Request Message</string>
    <string name="airport_code_error_message">You have to enter the airport code</string>
    <string name="copyright">2016 Develop by Dm@nl@ncers© </string>
    <string name="description">Because fastest flight planning is saving time and saving time is saving money&#8230;</string>
    <string name="email_confirmation">Email Confirmation</string>
    <string name="body_email">Are you sure you want to send this message</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="flight_code_error_format">Format is Invalid</string>
    <string name="choose_time">Choose Time:</string>
    <string name="choose_date">Choose Date:</string>
    <string name="login">Login</string>
    <string name="flight_planner">Flight Planner</string>
    <string name="template_prefix">dof</string>
    <string name="no_intenet_message">To send the message you need an internet connection. Do you want to activate it</string>
    <string name="err_invalid_format_email">Wrong Format.</string>
</resources>
