<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/flight_plan_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00779f"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/msgType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/message_type"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner_message_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/flight_number"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/flight_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/origin_airport_code"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/origin_airport_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/destination_airport_code"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/destination_airport_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="15sp" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/send_email"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:maxWidth="120dp"
            android:text="@string/send_email"
            android:theme="@style/AppTheme.Button" />
    </RelativeLayout>

</LinearLayout>
